refactor: major API and core functionality updates
- Updated GitHub Actions workflow for SkJson Tests
- Refactored package structure and imports across multiple files
- Enhanced JSON handling with improved error handling and logging
- Added new JsonWatchType enum with WSL, BOTH, and DEFAULT modes
- Improved HTTP request handling with better attachment support
- Updated configuration handling with new watch type options
- Enhanced file watching system with configurable refresh rates
- Added new JSON path manipulation features
- Improved error messages and debug logging
- Updated documentation and examples
- Fixed various bugs and improved code readability